--- a/backend/views/admin/layout.hbs
+++ b/backend/views/admin/layout.hbs
@@ -13,7 +13,7 @@
     </header>
     {{{body}}}
     <footer>
-        <p>Diseñado por Tomas Garcea</p>
+        <p>Diseñado por mí</p>
     </footer>
   </body>
 </html>
