--- a/backend/views/admin/agregar.hbs
+++ b/backend/views/admin/agregar.hbs
@@ -1,7 +1,7 @@
 <div class="container" style="margin: 100px auto">
     <div class="row">
         <div class="col-6 offset-3">
-            <h4>Agregar un novedad</h4>
+            <h4>Agregar una novedad</h4>
             <form action="/admin/novedades/agregar" method="post" enctype="multipart/form-data">
                 <div class="mb-3 row">
                     <input type="text" class="form-control" placeholder="Título" name="titulo">
