--- a/backend/views/admin/login.hbs
+++ b/backend/views/admin/login.hbs
@@ -14,7 +14,7 @@
             <button type="submit" class="btn btn-primary">Ingresar</button>
         </form>
         {{#if error}}
-        <p>Usuario y/o la contraseña incorrectos.</p>
+        <p>Usuario y/o la contraseña son incorrectos.</p>
         {{/if}}
     </div>
 </div>
