--- a/backend/views/admin/modificar.hbs
+++ b/backend/views/admin/modificar.hbs
@@ -21,7 +21,7 @@
                         <label>Imagen: <input type="file" class="form-control" name="imagen" id="imagen" /></label>
                     </p>
                     <p>
-                        <label><input type="checkbox" name="img_delete" id="img_delete" value="1">Sacar la imagen actual?</label>
+                        <label><input type="checkbox" name="img_delete" id="img_delete" value="1">Eliminar la imagen actual?</label>
                         <input type="hidden" name="img_original" value="{{novedad.img_id}}">
                     </p>
                 </div>
