--- a/backend/views/admin/novedades.hbs
+++ b/backend/views/admin/novedades.hbs
@@ -1,14 +1,14 @@
 <div class="container" style="margin-top: ">
     <div class="row">
-        <p class="text-end">Hola {{persona}}! <a href="/admin/login/logout" class="btn btn-danger">Cerrar sesión <i class="fas fa-sign-out-alt"></i></a></p>
+        <p class="text-end separar">Hola, {{persona}} <a href="/admin/login/logout" class="btn btn-danger">Cerrar la sesión <i class="fas fa-sign-out-alt"></i></a></p>
     </div>
 
     <div class="row">
         <div class="col-7">
-            <h3>Listado de novedades</h3>
+            <h3>Novedades</h3>
         </div>
         <div class="col-5 text-end">
-            <a class="btn btn-success" href="/admin/novedades/agregar"><i class="fa fa-plus" aria-hidde="true"></i> Nuevo</a>
+            <a class="btn btn-success" href="/admin/novedades/agregar"><i class="fa fa-plus" aria-hidde="true"></i> Agregar</a>
         </div>
     </div>
     <div class="row">
